WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283084
Fix non-unified JSCOnly build
https://bugs.webkit.org/show_bug.cgi?id=283084
Summary
Fix non-unified JSCOnly build
Adrian Perez
Reported
2024-11-13 14:28:15 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2024-11-13 14:36:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36615
EWS
Comment 2
2024-11-13 15:05:38 PST
Committed
286563@main
(6f54da6efa71): <
https://commits.webkit.org/286563@main
> Reviewed commits have been landed. Closing PR #36615 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-13 15:06:18 PST
<
rdar://problem/139832673
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug