Fix non-unified JSCOnly build https://bugs.webkit.org/show_bug.cgi?id=283084

Unreviewed non-unified build fix.

* Source/JavaScriptCore/runtime/NativeCallee.h: Add missing
  wtf/ThreadSafeRefCounted.h header inclusion.

Canonical link: https://commits.webkit.org/286563@main