Source/JavaScriptCore/runtime/NativeCallee.h
@@ -27,6 +27,7 @@
 
 #include "ImplementationVisibility.h"
 #include <wtf/TZoneMalloc.h>
+#include <wtf/ThreadSafeRefCounted.h>
 #include <wtf/ThreadSafeWeakPtr.h>
 
 namespace JSC {
